deployments/kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sport-front-service
  labels:
    name: sport-front
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP

  selector:
    app: sport-front
